--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,5 +18,17 @@
     "enzyme": "^3.2.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.1.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
